--- a/packages/vbi-component/src/components/chart/shelves/vbi-chart-having/vbi-chart-having.css
+++ b/packages/vbi-component/src/components/chart/shelves/vbi-chart-having/vbi-chart-having.css
@@ -79,3 +79,15 @@
 .having__item-down:hover {
   background-color: color-mix(in oklab, var(--color-base-content) 15%, transparent);
 }
+
+.having__drag {
+  flex-shrink: 0;
+}
+
+.having__item {
+  white-space: nowrap;
+}
+
+.having__item-text {
+  white-space: nowrap;
+}
