--- a/packages/vbi-component/src/components/chart/shelves/vbi-chart-shelf-panel/vbi-chart-shelf-panel.css
+++ b/packages/vbi-component/src/components/chart/shelves/vbi-chart-shelf-panel/vbi-chart-shelf-panel.css
@@ -21,6 +21,8 @@
   align-items: center;
   justify-content: space-between;
   gap: 4px;
+  white-space: nowrap;
+  flex-shrink: 0;
 }
 
 .chart-shelf__input {
